--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,7 +1,8 @@
 api_platform:
     title: Hello API Platform
     version: 1.0.0
-    defaults:
-        stateless: true
-        cache_headers:
-            vary: ['Content-Type', 'Authorization', 'Origin']
+    swagger:
+        api_keys:
+            Bearer:
+                name: Authorization
+                type: header
